--- a/day-14/simple-python-app/buildspec.yml
+++ b/day-14/simple-python-app/buildspec.yml
@@ -16,11 +16,10 @@ phases:
   build:
     commands:
       - echo "Running tests..."
-      - cd day-13/simple-python-app/
-      - echo "Building Docker image..."
-      - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USERNAME" --password-stdin "$DOCKER_REGISTRY_URL"
-      - docker build -t "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/simple-python-flask-app:latest" .
-      - docker push "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/simple-python-flask-app:latest"
+      - cd day-14/simple-python-app/
+      - docker login -u "$docker_username" -p "$docker_password"
+      - docker build -t "docker.io/darapureddy87/simple-python-flask-app:latest" .
+      - docker push "docker.io/$docker_username/simple-python-flask-app:latest"
   post_build:
     commands:
       - echo "Build completed successfully!"
